--- a/PortFolio/index.html
+++ b/PortFolio/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ress.css">
     <title>Yuta Portfolio</title>
 </head>
 
@@ -13,15 +14,17 @@
     <div id="container">
         <div id="header">
             <nav>
-                <ul>
-                    <li>About</li>
-                    <li>Skills</li>
-                    <li>Work</li>
-                    <li>Contact</li>
-                </ul>
+                <a href="#">About</a>
+                <a href="#">Works</a>
+                <a href="#">Contact</a>
             </nav>
         </div>
+        <div class="content">
+            <h2>Yuta's Portfolio</h2>
+            <p>WEB制作・デザイン・SEO対策を行います。</p>
+        </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 
