commit copy practice header

--- a/CopyPractice/LanguageSchool/index.html
+++ b/CopyPractice/LanguageSchool/index.html
@@ -6,13 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="ress.css">
     <title>圧倒的に安い英会話スクール</title>
 </head>
 
 <body>
     <div id="header">
         <div id="header-top">安いのにしっかり上達する英会話教室・英会話リンゲージ</div>
-        <div id="header-main"><a href="#"><img src="./imgs/logo.png" width="22%"></a></div>
+        <div id="header-main">
+            <div class="header-main-item">
+                <a href="#"><img src="./imgs/logo.png" width="65%"></a>
+            </div>
+            <div class="header-main-item">
+                <div id="call-form">
+                    <img src="./imgs/tel-mark.png">
+                    <label>03-5159-5071</label>
+                </div>
+                <p>火〜木7:00~22:00／土 11:00~19:00</p>
+                <p>※スクールにより受付時間が異なります。</p>
+            </div>
+            <div class="header-main-item">
+                <button>まずは気軽に無料体験</button>
+            </div>
+        </div>
     </div>
     <div id="container"></div>
     <div id="footer"></div>
