--- a/practice/index.html
+++ b/practice/index.html
@@ -7,26 +7,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="説明文説明文説明文">
     <meta name="keyword" content="keyword1,keyword2,keyword3">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <form action="#" method="post">
-        <p>名前<input type="text" name="i_name" size="30"></p>
-        <p>
-            血液型
-            <select name="blood">
-                <option value="A">A型</option>
-                <option value="B">B型</option>
-                <option value="O">C型</option>
-                <option value="AB">AB型</option>
-            </select>
-        </p>
-        <p>
-            意見
-            <input type="text" name="i_options" size="200">
-        </p>
-    </form>
+    <!-- flexbox -->
+    <div class="container">
+        <div class="item item1">アイテム1</div>
+        <div class="item item2">アイテム2</div>
+        <div class="item item3">アイテム3</div>
+    </div>
+    <h1>Hello World</h1>
+    <p>paragraph</p>
+    not paragraph
+    <div></div>
+    <div id="text-red">あいうえお</div>
+    <div class="text-green bg-gray">アイウエオ</div>
+    <div class="bg-black">AIUEO</div>
+    <div>
+        <ul>
+            <li>リスト1</li>
+            <li>リスト2</li>
+            <li>リスト3</li>
+            <li>リスト4</li>
+        </ul>
+    </div>
+
+    <div class="div-border">
+        枠線付き
+    </div>
+    <!-- padding -->
+    <div class="padding-no">no padding</div>
+    <div class="padding-yes">padding</div>
+    <!-- margin -->
+    <div class="margin-no">no margin</div>
+    <div class="margin-yes">margin</div>
+
+    <!-- display:block -->
+    <p class="block1">ブロック要素1</p>
+    <p class="block2">ブロック要素2</p>
+    <p class="block3">ブロック要素3</p>
+    <p class="block4">ブロック要素4</p>
+
+    <!-- display:inline -->
+    <span class="inline1">インライン要素1</span>
+    <span class="inline2">インライン要素2</span>
+    <span class="inline3">インライン要素3</span>
+    <span class="inline4">インライン要素4</span>
+
+    <!-- display:none -->
+    <p class="disp">表示</p>
+    <p class="disp-none">非表示</p>
 
 </body>
 
