add css, fix index.html bug

--- a/your-name’s-portfolio/index.html
+++ b/your-name’s-portfolio/index.html
@@ -9,15 +9,16 @@
     <meta name="desctiption" content="ここにサイトの説明文が入ります">
     <meta name="keywords" content="キーワード1, キーワード2">
     <link rel="stylesheet" href="https://use.typekit.net/mzd4mgq.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div id="container">
         <header class="header">
-            <a href="#" class="nav_btn titile">Yuta's Portfolio</a>
+            <a href="#" class="nav_btn title">Yuta's Portfolio</a>
             <div id="nav-open"><span></span></div>
             <div id="nav-content">
-                <nav class="headere_nav">
+                <nav class="header_nav">
                     <ul class="nav_list">
                         <li class="pc_none"><a href="#main" class="nav_btn">Top</a></li>
                         <li><a href="#about" class="nav_btn">About</a></li>
@@ -34,6 +35,7 @@
                 <img src="images/FV002.jpg" alt="topslice_2">
             </div>
             <h1>Hello, World!</h1>
+            htmlテキスト
         </section>
         <section id="about" class="bg-gray">
             <h2>About</h2>
@@ -61,16 +63,16 @@
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </div>
                 <div class="service-content">
-                    <img src="images/service002.svg" alt="website">
+                    <img src="images/service002.svg" alt="wordpress">
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </div>
                 <div class="service-content">
-                    <img src="images/service003.svg" alt="website">
+                    <img src="images/service003.svg" alt="writing">
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </div>
             </div>
         </section>
-        <section id="Works" class="bg-gray">
+        <section id="works" class="bg-gray">
             <h2>Works</h2>
             <p class="summary">テキストテキストテキストテキスト<br>テキストテキストテキストテキスト</p>
             <div class="work-list">
@@ -121,12 +123,12 @@
                     <ul>
                         <li><a href="#about">About</a></li>
                         <li><a href="#service">Service</a></li>
-                        <li><a href="#works">works</a></li>
+                        <li><a href="#works">Works</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="copyright">
-                    <p>©COpyright2022 Yuta's Portfolio</p>
+                    <p>©Copyright2022 Yuta's Portfolio</p>
                 </div>
                 <div class="sns-area">
                     <img src="images/twitter.svg" alt="twitter">
