fix miss index.html, style.css

--- a/your-name’s-portfolio/index.html
+++ b/your-name’s-portfolio/index.html
@@ -10,6 +10,11 @@
     <meta name="keywords" content="キーワード1, キーワード2">
     <link rel="stylesheet" href="https://use.typekit.net/mzd4mgq.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/hamburger.js"></script>
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
 </head>
 
 <body>
