--- a/your-name’s-portfolio/index.html
+++ b/your-name’s-portfolio/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yuta's Portfolio</title>
-    <meta name="desctiption" content="ここにサイトの説明文が入ります">
-    <meta name="keywords" content="キーワード1, キーワード2">
+    <meta name="desctiption" content="ユウタのポートフォリオサイトです。WEB制作を行っています。">
+    <meta name="keywords" content="WEB制作,HP制作,WordPress">
     <link rel="stylesheet" href="https://use.typekit.net/mzd4mgq.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -15,6 +15,7 @@
     <script src="js/hamburger.js"></script>
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -36,73 +37,118 @@
         </header>
         <section id="main">
             <div id="top-slide">
-                <img src="images/FV001.jpg" alt="topslice_1">
-                <img src="images/FV002.jpg" alt="topslice_2">
+                <img src="images/pexels-christina-morillo-1181675.jpg" alt="topslice_1">
+                <img src="images/pexels-cottonbro-5483064.jpg" alt="topslice_2">
             </div>
             <h1>Hello, World!</h1>
-            htmlテキスト
         </section>
-        <section id="about" class="bg-gray">
+        <section id="about" class="bg-c-blue">
             <h2>About</h2>
             <div class="about-flex">
                 <div class="about-text-area">
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    <p>ユウタです。WEB制作を行っています。</p>
                     <ul>
-                        <li>テキストテキストテキストテキスト</li>
-                        <li>テキストテキストテキストテキスト</li>
-                        <li>テキストテキストテキストテキスト</li>
-                        <li>テキストテキストテキストテキスト</li>
+                        <li>旅行</li>
+                        <li>まんが</li>
+                        <li>スノボ</li>
+                        <li>プログラミング</li>
                     </ul>
                 </div>
                 <div class="about-img-area">
-                    <img src="images/about_ex.jpg" class="sp_none" alt="about_img">
-                    <img src="images/about_sp.jpg" class="pc_none" alt="abount_img">
+                    <img src="images/AboutOrg.jpeg" class="sp_none" alt="about_img">
+                    <img src="images/AboutOrg_small.jpeg" class="pc_none" alt="about_img">
                 </div>
             </div>
         </section>
         <section id="service">
             <h2>Service</h2>
-            <p class="summary">テキストテキストテキストテキスト<br>テキストテキストテキストテキスト</p>
+            <p class="summary">ホームページ制作<br>業務委託（WEBサイト）</p>
             <div class="service-list">
                 <div class="service-content">
                     <img src="images/service001.svg" alt="website">
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    <p>WEBサイト構築を行います。業務委託・準委任契約での対応も可能です。</p>
                 </div>
                 <div class="service-content">
                     <img src="images/service002.svg" alt="wordpress">
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    <p>WordPressテーマカスタマイズ<br>テーマ作成</p>
                 </div>
                 <div class="service-content">
                     <img src="images/service003.svg" alt="writing">
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    <p>ライティング（？）</p>
+                </div>
+                <div class="service-content">
+                    <img src="images/service003.svg" alt="writing">
+                    <p>ライティング（？）</p>
+                </div>
+                <div class="service-content">
+                    <img src="images/service001.svg" alt="website">
+                    <p>WEBサイト構築を行います。業務委託・準委任契約での対応も可能です。</p>
+                </div>
+                <div class="service-content">
+                    <img src="images/service002.svg" alt="wordpress">
+                    <p>WordPressテーマカスタマイズ<br>テーマ作成</p>
                 </div>
             </div>
         </section>
-        <section id="works" class="bg-gray">
+        <section id="works" class="bg-c-blue">
             <h2>Works</h2>
-            <p class="summary">テキストテキストテキストテキスト<br>テキストテキストテキストテキスト</p>
+            <p class="summary">制作サイト</p>
             <div class="work-list">
                 <div class="work-content">
-                    <img src="images/works001.jpg" alt="site_1">
-                    <p>テキストテキストテキストテキストテキストテキスト</p>
+                    <a href="https://fonts.google.com/">
+                        <img src="images/works001.jpg" alt="site_1">
+                    </a>
+                    <p>コーヒーショップHP</p>
                 </div>
                 <div class="work-content">
-                    <img src="images/works002.jpg" alt="site_2">
-                    <p>テキストテキストテキストテキストテキストテキスト</p>
+                    <a href="https://www.google.com/">
+                        <img src="images/works002.jpg" alt="site_2">
+                        <p>カフェHP</p>
+                    </a>
                 </div>
                 <div class="work-content">
-                    <img src="images/works003.jpg" alt="site_3">
-                    <p>テキストテキストテキストテキストテキストテキスト</p>
+                    <a href="https://www.pen-kanagawa.ed.jp/kamakura-h/">
+                        <img src="images/works003.jpg" alt="site_3">
+                    </a>
+                    <p>学校HP</p>
                 </div>
                 <div class="work-content">
-                    <img src="images/works004.jpg" alt="site_4">
-                    <p>テキストテキストテキストテキストテキストテキスト</p>
+                    <a href="http://inari.jp/">
+                        <img src="images/works004.jpg" alt="site_4">
+                    </a>
+                    <p>弥生神社HP</p>
+                </div>
+                <div class="work-content">
+                    <a href="https://www.starbucks.co.jp/">
+                        <img src="images/works002.jpg" alt="site_2">
+                    </a>
+                    <p>カフェHP</p>
+                </div>
+                <div class="work-content">
+                    <a href="https://www.starbucks.co.jp/">
+                        <img src="images/works001.jpg" alt="site_1">
+                    </a>
+                    <p>コーヒーショップHP</p>
                 </div>
             </div>
         </section>
-        <section id="contact">
+        <section id="hobby">
+            <h2>Hoby</h2>
+            <h3>スノーボード</h3>
+            <div class="hobby-list">
+                <div class="hobby-content">
+                    <img src="images/denys-nevozhai-duo-xV0TU7s-unsplash.jpg">
+                    <p>いってみたい</p>
+                </div>
+                <div class="hobby-content">
+                    <img src="images/caspar-camille-rubin-YMsrTLXTQTE-unsplash.jpg">
+                    <p>ここにもいってみたい</p>
+                </div>
+            </div>
+        </section>
+        <section id="contact" class="bg-c-blue">
             <h2>Contact</h2>
-            <p class="summary">テキストテキストテキストテキスト<br>テキストテキストテキストテキスト</p>
+            <p class="summary">以下お問い合わせフォームからご連絡ください。<br>２日以内にお返事させていただきます。</p>
             <div class="contact-form">
                 <form>
                     <table>
@@ -137,10 +183,10 @@
                     <p>©Copyright2022 Yuta's Portfolio</p>
                 </div>
                 <div class="sns-area">
-                    <img src="images/twitter.svg" alt="twitter">
-                    <img src="images/facebook.svg" alt="facebook">
-                    <img src="images/youtube.svg" alt="youtube">
-                    <img src="images/instagram.svg" alt="instagram">
+                    <a href="https://twitter.com/home"><img src="images/twitter.svg" alt="twitter"></a>
+                    <a href="https://ja-jp.facebook.com/"><img src="images/facebook.svg" alt="facebook"></a>
+                    <a href="https://www.youtube.com/"><img src="images/youtube.svg" alt="youtube"></a>
+                    <a href="https://www.instagram.com/"><img src="images/instagram.svg" alt="instagram"></a>
                 </div>
             </div>
         </footer>
