create standard-layout, upload,compress image

--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -17,7 +17,6 @@
     <div id="top" class="full-img">
         <div class="wrapper">
             <header>
-                <div id="logo">ロゴエリア</div>
                 <nav>
                     <ul class="nav-list">
                         <li><a href="about.html">About</a></li>
@@ -28,9 +27,7 @@
                 </nav>
             </header>
         </div>
-        <h1>
-            Yuta's Portfolio
-        </h1>
+        <img src="images/logo.png" alt="logo" id="logo">
         <h2>Hello, World</h2>
     </div>
     <div id="skills" class="bg-secondary">
@@ -74,9 +71,48 @@
             </div>
         </div>
     </div>
-    <div id="works" class="bg-primary">works</div>
-    <div id="contact" class="bg-secondary">Contact</div>
-    <footer>フッター</footer>
+    <div id="works" class="bg-primary">
+        <div class="wrapper">
+            <h1>
+                works
+            </h1>
+            <div class="work-contents">
+                <div class="item">
+                    <label>動物病院</label>
+                    <a href="http://goole.com">
+                        <img src="images/Dog.jpg" alt="動物病院">
+                    </a>
+                </div>
+                <div class="item flex-reverse">
+                    <label>カフェ</label>
+                    <a href="http://goole.com">
+                        <img src="images/cafe-building.jpg" alt="カフェ">
+                    </a>
+                </div>
+                <div class="item">
+                    <label>宮ケ瀬公園</label>
+                    <a href="http://goole.com">
+                        <img src="images/park.jpg" alt="宮ケ瀬公園">
+                    </a>
+                </div>
+                <p>etc...</p>
+            </div>
+        </div>
+    </div>
+    <div id="contact" class="bg-secondary">
+        <div class="wrapper">
+            <h1>Contact</h1>
+            <label for="name">お名前</label>
+            <input type="text" name="name" id="name">
+            <label for="email">メールアドレス</label>
+            <input type="email" name="email" id="email">
+            <label for="inquiry">お問い合わせ</label>
+            <textarea name="inquiry" id="inquiry"></textarea>
+        </div>
+    </div>
+    <footer>
+        &copy; Yuta
+    </footer>
 </body>
 
 </html>
