--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" prefix="og: https://ogp.me/ns#">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ユウタのポートフォリオサイトです。WEB制作、SEO対策行います。">
+    <meta property="og.title" content="Yuta's Portfolio">
+    <meta property="og.type" content="website">
+    <meta property="og.image" content="http://site-name/MyPortfolio/images/top-full.jpg">
+    <meta property="og.url" content="http://site-name/MyPortfolio/index.html">
+    <meta property="og.description" content="ユウタのポートフォリオサイトです。WEB制作、SEO対策を行います。">
+    <meta property="og.site_name" content="Yuta's Portfolio">
+    <meta property="og.locale" content="ja_JP">
+    <meta name="twitter:card" content="Summary Card">
+    <meta name="twitter:url" content="Summary Card">
     <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Roboto:wght@100;400&display=swap"
