--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -111,17 +111,19 @@
     <div id="contact" class="bg-secondary">
         <div class="wrapper">
             <h1>Contact</h1>
-            <label for="name">お名前</label>
-            <input type="text" name="name" id="name">
-            <label for="email">メールアドレス</label>
-            <input type="email" name="email" id="email">
-            <label for="inquiry">お問い合わせ</label>
-            <textarea name="inquiry" id="inquiry"></textarea>
+            <form action="#" method="post">
+                <label for="name">お名前</label>
+                <input type="text" name="name" id="name">
+                <label for="email">メールアドレス</label>
+                <input type="email" name="email" id="email">
+                <label for="inquiry">お問い合わせ</label>
+                <textarea name="inquiry" id="inquiry"></textarea>
+                <div>
+                    <button class="btn">送信</button>
+                </div>
+            </form>
         </div>
     </div>
-    <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSf1WpCWONubTImGYxKE0ed7a1xVG-waiB3Cu3f8gyJ-DCnAMg/viewform?embedded=true"
-        width="100%" height="1346px" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
     <footer>
         &copy; Yuta
     </footer>
