--- a/MyPortfolio/about.html
+++ b/MyPortfolio/about.html
@@ -33,7 +33,7 @@
                 <p>ビアカーデンの開く夏が好きです。</p>
             </div>
             <div id="automn" class="full-img">
-                <p>なにをしてても楽しい空きが好きです。</p>
+                <p>なにをしてても楽しい秋が好きです。</p>
             </div>
             <div id="winter" class="full-img">
                 <p>スノーボードの冬が好きです。</p>
