--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -11,26 +11,24 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header class="fs-20">
-            <div id="header-title">
-                THE LITTLE CAFE
-            </div>
-            <nav class="pc">
-                <ul>
-                    <li>MENU</li>
-                    <li>ABOUT</li>
-                </ul>
-            </nav>
-        </header>
-    </div>
+    <header class="fs-20 wrapper">
+        <div id="header-title">
+            THE LITTLE CAFE
+        </div>
+        <nav class="pc">
+            <ul>
+                <li>MENU</li>
+                <li>ABOUT</li>
+            </ul>
+        </nav>
+    </header>
     <div id="top">
         <p>お好みのブレンドをお手軽に</p>
     </div>
     <div class="wrapper">
         <div id="menu">
             <h1>MENU</h1>
-            <div class="menu-contents contents-wrapper">
+            <div class="menu-contents">
                 <div class="menu-item">
                     <img src="images/PC/menu01.png" alt="カフェラテ" class="pc">
                     <img src="images/SP/menu01-sp.png" alt="カフェラテ" class="sp">
@@ -51,18 +49,18 @@
                 </div>
             </div>
         </div>
-        <div id="about">
-            <h1>ABOUT</h1>
-            <div class="about-contents contents-wrapper">
-                <div class="about-item">
-                    <img src="images/PC/about.png" alt="about" class="pc">
-                    <img src="images/SP/about-sp.png" alt="about" class="sp">
-                </div>
-                <div class="about-item txt-left">
-                    <h2>老舗の味をテイクアウトで楽しめる新しいカフェスタイル</h2>
-                    <p>知る人ぞ知る東京銀座の老舗カフェが提供する、移動販売のテイクアウトコーヒーです。<br>「いつもの」がお家でオフィスでお気軽に楽しめます。</p>
-                    <button class="btn">MORE</button>
-                </div>
+    </div>
+    <div id="about">
+        <h1>ABOUT</h1>
+        <div class="about-contents contents-wrapper">
+            <div class="about-item">
+                <img src="images/PC/about.png" alt="about" class="pc">
+                <img src="images/SP/about-sp.png" alt="about" class="sp">
+            </div>
+            <div class="about-item txt-left flex-column">
+                <h2>老舗の味をテイクアウトで楽しめる<span>新しいカフェスタイル</span></h2>
+                <p>知る人ぞ知る東京銀座の老舗カフェが提供する、移動販売のテイクアウトコーヒーです。<span>「いつもの」がお家でオフィスでお気軽に楽しめます。</span></p>
+                <button class="btn">MORE</button>
             </div>
         </div>
     </div>
