fix tab,sp size layout

--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -15,7 +15,7 @@
         <div id="header-title">
             THE LITTLE CAFE
         </div>
-        <nav class="pc">
+        <nav class="pc tb">
             <ul>
                 <li>MENU</li>
                 <li>ABOUT</li>
@@ -65,7 +65,7 @@
         </div>
     </div>
     <footer>
-        <p class="fs-20">&copy;Copyright2021 THE LITTLE CAFE</p>
+        <p>&copy;Copyright2021 THE LITTLE CAFE</p>
     </footer>
 </body>
 
