add images for retina display

--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -30,20 +30,26 @@
             <h1>MENU</h1>
             <div class="menu-contents">
                 <div class="menu-item">
-                    <img src="images/PC/menu01.png" alt="カフェラテ" class="pc">
-                    <img src="images/SP/menu01-sp.png" alt="カフェラテ" class="sp">
+                    <img src="images/PC/menu01.png" alt="カフェラテ" class="pc"
+                        srcset="images/PC/menu01.png 1x,images/PC/menu01@2x.png 2x">
+                    <img src="images/SP/menu01-sp.png" alt="カフェラテ" class="sp"
+                        srcset="images/SP/menu01-sp.png 1x,images/SP/menu01-sp@2x.png 2x">
                     <h2>カフェラテ（ICE・HOT）</h2>
                     <p>お好みのブレンドコーヒーと<br>厳選したミルクのカフェラテ</p>
                 </div>
                 <div class="menu-item">
-                    <img src="images/PC/menu02.png" alt="コーヒー" class="pc">
-                    <img src="images/SP/menu02-sp.png" alt="コーヒー" class="sp">
+                    <img src="images/PC/menu02.png" alt="コーヒー" class="pc"
+                        srcset="images/PC/menu02.png 1x,images/PC/menu02@2x.png 2x">
+                    <img src="images/SP/menu02-sp.png" alt="コーヒー" class="sp"
+                        srcset="images/SP/menu02-sp.png 1x,images/SP/menu02-sp@2x.png 2x">
                     <h2>コーヒー（ICE・HOT）</h2>
                     <p>お好みの味をブレンドした<br>コーヒー本来の味を味わえる</p>
                 </div>
                 <div class="menu-item">
-                    <img src="images/PC/menu03.png" alt="カップケーキ" class="pc">
-                    <img src="images/SP/menu03-sp.png" alt="カップケーキ" class="sp">
+                    <img src="images/PC/menu03.png" alt="カップケーキ" class="pc"
+                        srcset="images/PC/menu03.png 1x,images/PC/menu03@2x.png 2x">
+                    <img src="images/SP/menu03-sp.png" alt="カップケーキ" class="sp"
+                        srcset="images/SP/menu03-sp.png 1x,images/SP/menu03-sp@2x.png 2x">
                     <h2>カップケーキ（各種）</h2>
                     <p>コーヒーのお供に<br>日替わり常時５種類</p>
                 </div>
@@ -54,8 +60,10 @@
         <h1>ABOUT</h1>
         <div class="about-contents contents-wrapper">
             <div class="about-item">
-                <img src="images/PC/about.png" alt="about" class="pc">
-                <img src="images/SP/about-sp.png" alt="about" class="sp">
+                <img src="images/PC/about.png" alt="about" class="pc"
+                    srcset="images/PC/about.png 1x,images/PC/about@2x.png 2x">
+                <img src="images/SP/about-sp.png" alt="about" class="sp"
+                    srcset="images/SP/about.png 1x,images/SP/about@2x.png 2x">
             </div>
             <div class="about-item txt-left flex-column">
                 <h2>老舗の味をテイクアウトで楽しめる<span>新しいカフェスタイル</span></h2>
