fix 375 window layout

--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="fs-20 wrapper">
+    <header class="fs-20 header-wrapper">
         <div id="header-title">
             THE LITTLE CAFE
         </div>
@@ -59,13 +59,13 @@
     <div id="about">
         <h1>ABOUT</h1>
         <div class="about-contents contents-wrapper">
-            <div class="about-item">
+            <div class="about-item-img">
                 <img src="images/PC/about.png" alt="about" class="pc"
                     srcset="images/PC/about.png 1x,images/PC/about@2x.png 2x">
                 <img src="images/SP/about-sp.png" alt="about" class="sp"
-                    srcset="images/SP/about.png 1x,images/SP/about@2x.png 2x">
+                    srcset="images/SP/about-sp.png 1x,images/SP/about-sp@2x.png 2x">
             </div>
-            <div class="about-item txt-left flex-column">
+            <div class="about-item-text txt-left flex-column">
                 <h2>老舗の味をテイクアウトで楽しめる<span>新しいカフェスタイル</span></h2>
                 <p>知る人ぞ知る東京銀座の老舗カフェが提供する、移動販売のテイクアウトコーヒーです。<span>「いつもの」がお家でオフィスでお気軽に楽しめます。</span></p>
                 <button class="btn">MORE</button>
