--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="コーヒー,銀座,テイクアウト,カフェラテ,移動販売">
     <meta name="description" content="知る人ぞ知る東京銀座の老舗カフェが提供する、移動販売のテイクアウトコーヒーです。「いつもの」がお家でオフィスでお気軽に楽しめます。">
     <title>THE LITTLE CAFE</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ress.15pcss">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/ress.css">
 </head>
 
 <body>
