add first level html

--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -13,6 +13,26 @@
 </head>
 
 <body>
+    <header>
+        <div id="site-title">滑石きたむら動物病院</div>
+        <nav>
+            <ul class="nav-list">
+                <li>ご挨拶</li>
+                <li>特徴</li>
+                <li>サービス</li>
+                <li>お知らせ</li>
+                <li>アクセス</li>
+                <li>お問い合わせ</li>
+            </ul>
+        </nav>
+    </header>
+    <div id="top">top</div>
+    <div id="about">about</div>
+    <div id="service">service</div>
+    <div id="information">information</div>
+    <div id="access">access</div>
+    <div id="inquiry">inquiry</div>
+    <footer>footer</footer>
 
 </body>
 
