--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -9,6 +9,8 @@
     緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。
     動物たちが健康で幸せな生活を送ることができるようサポートいたします。">
     <meta name="keywords" content="動物病院,24時間,往診,ペットホテル,トリミング,長崎県,長崎市,横尾">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/ress.css">
     <title>滑石きたむら動物病院</title>
 </head>
 
