add header reponsive

--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -37,7 +37,7 @@
             </svg>
             <p>滑石きたむら動物病院</p>
         </div>
-        <nav>
+        <nav class="pc">
             <ul class="nav-list">
                 <li>ご挨拶</li>
                 <li>特徴</li>
@@ -46,6 +46,13 @@
                 <li>アクセス</li>
                 <li>お問い合わせ</li>
             </ul>
+        </nav>
+        <nav class="no-pc">
+            <div class="toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
     <div id="top">top</div>
