--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -55,8 +55,23 @@
             </div>
         </nav>
     </header>
-    <div id="top">top</div>
-    <div id="about">about</div>
+    <div id="top">
+        <h1 class="top-message no-pc">
+            <p>滑石きたむら動物病院は
+                <span class="primary-color">
+                    大切な家族の<br>ホームドクターです
+                </span>
+            </p>
+        </h1>
+    </div>
+    <div id="about" class="wrapper">
+        <h1 class="primary-color">動物たちの健康で<span class="primary-color">幸せな生活をサポート</span></h1>
+        <p>
+            <span>当院は地域に密着し、皆さまの大切な家族の一員である動物たちのホームドクターを目指しています。</span>
+            <span>緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。</span>
+            <span>動物たちが健康で幸せな生活を送ることができるようサポートいたします。</span>
+        </p>
+    </div>
     <div id="service">service</div>
     <div id="information">information</div>
     <div id="access">access</div>
