fix ress.css order,nav link, full-size, 470px

--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -2,15 +2,15 @@
 <html lang="ja">
 
 <head>
-    <meta name=”robots” content=”noindex”>
+    <meta name=”robots” content=”no-index”>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="コーヒー,銀座,テイクアウト,カフェラテ,移動販売">
     <meta name="description" content="知る人ぞ知る東京銀座の老舗カフェが提供する、移動販売のテイクアウトコーヒーです。「いつもの」がお家でオフィスでお気軽に楽しめます。">
     <title>THE LITTLE CAFE</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/ress.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -20,12 +20,12 @@
         </div>
         <nav class="pc tb">
             <ul>
-                <li>MENU</li>
-                <li>ABOUT</li>
+                <li><a href="#menu">MENU</a></li>
+                <li><a href="#about">ABOUT</a></li>
             </ul>
         </nav>
     </header>
-    <div id="top">
+    <div id="top" class="full-size">
         <p>お好みのブレンドをお手軽に</p>
     </div>
     <div class="wrapper">
