fix full-size layout(over 1080px)

--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <div id="about">
+    <div id="about" class="full-size">
         <h1>ABOUT</h1>
         <div class="about-contents contents-wrapper">
             <div class="about-item-img">
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="full-size">
         <p>&copy;Copyright2021 THE LITTLE CAFE</p>
     </footer>
 </body>
