fix mediate layout

--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -18,7 +18,7 @@
         <div id="header-title">
             THE LITTLE CAFE
         </div>
-        <nav class="pc tb">
+        <nav class="pc">
             <ul>
                 <li><a href="#menu">MENU</a></li>
                 <li><a href="#about">ABOUT</a></li>
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <div id="top" class="full-size">
-        <p>お好みのブレンドをお手軽に</p>
+        <p>お好みのブレンドを<br class="sp">お手軽に</p>
     </div>
     <div class="wrapper">
         <div id="menu">
@@ -69,7 +69,7 @@
                     srcset="images/SP/about-sp.png 1x,images/SP/about-sp@2x.png 2x">
             </div>
             <div class="about-item-text txt-left flex-column">
-                <h2>老舗の味をテイクアウトで楽しめる<span>新しいカフェスタイル</span></h2>
+                <h2>老舗の味をテイクアウトで楽しめる<br class="pc">新しいカフェスタイル</h2>
                 <p>知る人ぞ知る東京銀座の老舗カフェが提供する、移動販売のテイクアウトコーヒーです。<span>「いつもの」がお家でオフィスでお気軽に楽しめます。</span></p>
                 <button class="btn">MORE</button>
             </div>
