--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -412,14 +412,68 @@
                 </svg>
             </div>
             <p>ご予約やご質問などお気軽にお問い合わせください。<br>お問い合わせいただいてから3日以内の返信となります。</p>
-            <form action="#"><label for="name"></label><input type="text" name="name">
-                <label for="email"></label><input type="email" name="email"><label for="inquiry"></label><textarea
-                    name="inquiry"></textarea>
+            <form action="#">
+                <div class="form-control">
+                    <label for="name">お名前</label>
+                    <input type="text" name="name" id="name">
+                </div>
+                <div class="form-control">
+                    <label for="email">メールアドレス</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div class="form-control">
+                    <label for="detail">内　容</label>
+                    <textarea name="detail" id="detail"></textarea>
+                </div>
+                <div class="form-control">
+                    <input type="button" value="送 信" class="btn">
+                </div>
             </form>
         </div>
 
     </section>
-    <footer>footer</footer>
+    <footer class="full-size">
+        <div class="wrapper">
+            <nav>
+                <ul class="nav-list">
+                    <li>TOP</li>
+                    <li>ご挨拶</li>
+                    <li>特徴</li>
+                    <li>サービス</li>
+                    <li>お知らせ</li>
+                    <li>アクセス</li>
+                    <li>お問い合わせ</li>
+                </ul>
+            </nav>
+            <p>©︎Copyright2021　滑石きたむら動物病院</p>
+            <div class="sns-icon-list">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22.367" height="18.178" viewBox="0 0 22.367 18.178">
+                    <path id="icon_twitter"
+                        d="M82.034,116.589a12.968,12.968,0,0,0,13.057-13.057c0-.2,0-.4-.013-.593a9.338,9.338,0,0,0,2.289-2.376,9.16,9.16,0,0,1-2.635.722,4.6,4.6,0,0,0,2.018-2.538,9.2,9.2,0,0,1-2.914,1.114A4.591,4.591,0,0,0,85.9,103a8.5,8.5,0,0,0,.119,1.046s-7.2-2.018-9.459-4.795a4.593,4.593,0,0,0,1.421,6.126A4.555,4.555,0,0,1,75.9,104.8c0,.019,0,.038,0,.059a4.591,4.591,0,0,0,3.682,4.5,4.582,4.582,0,0,1-2.072.079,4.594,4.594,0,0,0,4.287,3.187,9.209,9.209,0,0,1-5.7,1.964A9.333,9.333,0,0,1,75,114.528a12.992,12.992,0,0,0,7.034,2.061"
+                        transform="translate(-75 -98.411)" fill="#fff" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="23.464" height="23.411" viewBox="0 0 23.464 23.411">
+                    <path id="icon_facebook"
+                        d="M9.477,22.328h0a11.236,11.236,0,1,1,3.512,0V14.479H15.6l.5-3.247H12.987V9.1a1.617,1.617,0,0,1,1.83-1.733h1.416V4.607a17.411,17.411,0,0,0-2.514-.219c-2.656,0-4.242,1.634-4.242,4.37v2.475H6.625v3.247H9.477v7.848Z"
+                        transform="translate(0.5 0.5)" fill="#fff" stroke="rgba(0,0,0,0)" stroke-miterlimit="10"
+                        stroke-width="1" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="23.338" height="16.636" viewBox="0 0 23.338 16.636">
+                    <path id="icon_youtube"
+                        d="M11.169,15.636c-.07,0-7.006-.005-8.727-.467A2.8,2.8,0,0,1,.467,13.2,29.252,29.252,0,0,1,0,7.818,29.241,29.241,0,0,1,.467,2.442,2.8,2.8,0,0,1,2.442.467C4.164.005,11.1,0,11.169,0s7,.005,8.727.467a2.8,2.8,0,0,1,1.975,1.975,29.241,29.241,0,0,1,.467,5.376,29.252,29.252,0,0,1-.467,5.377A2.8,2.8,0,0,1,19.9,15.17C18.174,15.631,11.239,15.636,11.169,15.636ZM8.935,4.468v6.7l5.8-3.351Z"
+                        transform="translate(0.5 0.5)" fill="#fff" stroke="rgba(0,0,0,0)" stroke-miterlimit="10"
+                        stroke-width="1" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20.803" height="20.802" viewBox="0 0 20.803 20.802">
+                    <path id="icon_instagram"
+                        d="M5.79,19.8A5.8,5.8,0,0,1,0,14.013V5.79A5.8,5.8,0,0,1,5.79,0h8.223A5.8,5.8,0,0,1,19.8,5.79v8.223a5.8,5.8,0,0,1-5.79,5.79ZM1.846,5.79v8.223A3.949,3.949,0,0,0,5.79,17.957h8.223a3.948,3.948,0,0,0,3.944-3.944V5.79a3.948,3.948,0,0,0-3.944-3.944H5.79A3.949,3.949,0,0,0,1.846,5.79ZM4.783,9.9A5.119,5.119,0,1,1,9.9,15.02,5.124,5.124,0,0,1,4.783,9.9Zm1.846,0A3.272,3.272,0,1,0,9.9,6.628,3.275,3.275,0,0,0,6.629,9.9ZM13.958,4.62a1.234,1.234,0,1,1,1.234,1.234A1.234,1.234,0,0,1,13.958,4.62Z"
+                        transform="translate(0.5 0.5)" fill="#fff" stroke="rgba(0,0,0,0)" stroke-miterlimit="10"
+                        stroke-width="1" />
+                </svg>
+
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
