update sp layout perfect pixel

--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -9,6 +9,7 @@
     緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。
     動物たちが健康で幸せな生活を送ることができるようサポートいたします。">
     <meta name="keywords" content="動物病院,24時間,往診,ペットホテル,トリミング,長崎県,長崎市,横尾">
+    <link rel="icon" type="image/svg+xml" href="./icon_heading-cat-hand.svg">
     <link rel="stylesheet" href="./css/ress.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>滑石きたむら動物病院</title>
@@ -68,7 +69,7 @@
             </ul>
         </nav>
     </header>
-    <section id="top" class="full-size">
+    <div id="top" class="full-size">
         <div class="top-message no-pc">
             <p>滑石きたむら動物病院は
                 <span class="primary-color">
@@ -76,8 +77,8 @@
                 </span>
             </p>
         </div>
-    </section>
-    <section id="about" class="bg-primary full-size">
+    </div>
+    <section id="about" class="full-size">
         <div class="wrapper">
             <div id="about-heading">
                 <h1 class="primary-color">動物たちの健康で<span class="primary-color">幸せな生活をサポート</span></h1>
@@ -144,7 +145,7 @@
                     </svg>
                 </p>
             </div>
-            <div id="about-contents" class="full-size">
+            <div id="about-contents" class="full-size bg-primary">
                 <div class="wrapper">
                     <div class="content">
                         <div id="content-image01" class="content-image"></div>
@@ -172,7 +173,7 @@
         </div>
     </section>
     <section id="service">
-        <div class="icon-heading"><svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25"
+        <h1 class="icon-heading"><svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25"
                 viewBox="0 0 25.49 25">
                 <g class="icon_heading-cat-hand" transform="translate(-62.697 -56.21)">
                     <path class="パス_1" data-name="パス 1"
@@ -192,7 +193,7 @@
                         transform="translate(-335.783 -129.559)" fill="#0d96a0" />
                 </g>
             </svg>
-            <h1>サービス</h1>
+            <span>サービス</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25" viewBox="0 0 25.49 25">
                 <g class="icon_heading-cat-hand" transform="translate(-62.697 -56.21)">
                     <path class="パス_1" data-name="パス 1"
@@ -212,7 +213,7 @@
                         transform="translate(-335.783 -129.559)" fill="#0d96a0" />
                 </g>
             </svg>
-        </div>
+        </h1>
         <div id="service-contents" class="wrapper">
             <div class="service-content">
                 <div id="service-content-image01" class="service-content-image"></div>
@@ -233,7 +234,7 @@
     </section>
     <section id="information" class="full-size bg-primary">
         <div class="wrapper">
-            <div class="icon-heading"><svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25"
+            <h1 class="icon-heading"><svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25"
                     viewBox="0 0 25.49 25">
                     <g class="icon_heading-cat-hand" transform="translate(-62.697 -56.21)">
                         <path class="パス_1" data-name="パス 1"
@@ -253,7 +254,7 @@
                             transform="translate(-335.783 -129.559)" fill="#0d96a0" />
                     </g>
                 </svg>
-                <h1>お知らせ</h1>
+                <span>お知らせ</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25" viewBox="0 0 25.49 25">
                     <g class="icon_heading-cat-hand" transform="translate(-62.697 -56.21)">
                         <path class="パス_1" data-name="パス 1"
@@ -273,7 +274,7 @@
                             transform="translate(-335.783 -129.559)" fill="#0d96a0" />
                     </g>
                 </svg>
-            </div>
+            </h1>
             <div class="information-contents">
                 <table>
                     <tbody>
@@ -308,7 +309,7 @@
         </div>
     </section>
     <section id="access">
-        <div class="icon-heading"><svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25"
+        <h1 class="icon-heading"><svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25"
                 viewBox="0 0 25.49 25">
                 <g class="icon_heading-cat-hand" transform="translate(-62.697 -56.21)">
                     <path class="パス_1" data-name="パス 1"
@@ -328,7 +329,7 @@
                         transform="translate(-335.783 -129.559)" fill="#0d96a0" />
                 </g>
             </svg>
-            <h1>アクセス</h1>
+            <span>アクセス</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25" viewBox="0 0 25.49 25">
                 <g class="icon_heading-cat-hand" transform="translate(-62.697 -56.21)">
                     <path class="パス_1" data-name="パス 1"
@@ -348,7 +349,7 @@
                         transform="translate(-335.783 -129.559)" fill="#0d96a0" />
                 </g>
             </svg>
-        </div>
+        </h1>
         <div class="access-contents wrapper">
             <div class="access-map">
                 <iframe
@@ -358,19 +359,19 @@
             </div>
             <div class="access-text">
                 <h2>滑石きたむら動物病院</h2>
-                <p>〒852-8065 長崎県長崎市横尾1丁目5-36</p>
+                <p>〒852-8065　長崎県長崎市横尾1丁目5-36</p>
                 <p>電話：<span>000-0000-0000</span></p>
                 <p>メール：info@kitamura.animalhospital.com</p>
-                <div class="opening">
-                    <p>診療時間：24時間365日</p>
-                    <p>休診日：なし</p>
-                </div>
+                <hr>
+                <p>診療時間：24時間365日</p>
+                <p>休診日：なし</p>
+                <hr>
             </div>
         </div>
     </section>
     <section id="inquiry" class="bg-primary full-size">
         <div class="wrapper">
-            <div class="icon-heading"><svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25"
+            <h1 class="icon-heading"><svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25"
                     viewBox="0 0 25.49 25">
                     <g class="icon_heading-cat-hand" transform="translate(-62.697 -56.21)">
                         <path class="パス_1" data-name="パス 1"
@@ -390,7 +391,7 @@
                             transform="translate(-335.783 -129.559)" fill="#0d96a0" />
                     </g>
                 </svg>
-                <h1>お問い合わせ</h1>
+                <span>お問い合わせ</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="25.49" height="25" viewBox="0 0 25.49 25">
                     <g class="icon_heading-cat-hand" transform="translate(-62.697 -56.21)">
                         <path class="パス_1" data-name="パス 1"
@@ -410,7 +411,7 @@
                             transform="translate(-335.783 -129.559)" fill="#0d96a0" />
                     </g>
                 </svg>
-            </div>
+            </h1>
             <p>ご予約やご質問などお気軽にお問い合わせください。<br>お問い合わせいただいてから3日以内の返信となります。</p>
             <form action="#">
                 <div class="form-control">
