add menu link, action clicked

--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -42,12 +42,12 @@
             </div>
             <nav class="pc">
                 <ul class="nav-list">
-                    <li>ご挨拶</li>
-                    <li>特徴</li>
-                    <li>サービス</li>
-                    <li>お知らせ</li>
-                    <li>アクセス</li>
-                    <li>お問い合わせ</li>
+                    <li><a href="#about-heading">ご挨拶</a></li>
+                    <li><a href="#about-contents">特徴</a></li>
+                    <li><a href="#service">サービス</a></li>
+                    <li><a href="#information">お知らせ</a></li>
+                    <li><a href="#access">アクセス</a></li>
+                    <li><a href="#inquiry">お問い合わせ</a></li>
                 </ul>
             </nav>
             <div class="no-pc">
@@ -60,12 +60,12 @@
         </div>
         <nav class="no-pc nav-toggle-menu">
             <ul class="nav-column-list full-size">
-                <li>ご挨拶</li>
-                <li>特徴</li>
-                <li>サービス</li>
-                <li>お知らせ</li>
-                <li>アクセス</li>
-                <li>お問い合わせ</li>
+                <li><a href="#about-heading">ご挨拶</a></li>
+                <li><a href="#about-contents">特徴</a></li>
+                <li><a href="#service">サービス</a></li>
+                <li><a href="#information">お知らせ</a></li>
+                <li><a href="#access">アクセス</a></li>
+                <li><a href="#inquiry">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
@@ -437,13 +437,13 @@
         <div class="wrapper">
             <nav>
                 <ul class="nav-list">
-                    <li>TOP</li>
-                    <li>ご挨拶</li>
-                    <li>特徴</li>
-                    <li>サービス</li>
-                    <li>お知らせ</li>
-                    <li>アクセス</li>
-                    <li>お問い合わせ</li>
+                    <li><a href="#top">TOP</a></li>
+                    <li><a href="#about-heading">ご挨拶</a></li>
+                    <li><a href="#about-contents">特徴</a></li>
+                    <li><a href="#service">サービス</a></li>
+                    <li><a href="#information">お知らせ</a></li>
+                    <li><a href="#access">アクセス</a></li>
+                    <li><a href="#inquiry">お問い合わせ</a></li>
                 </ul>
             </nav>
             <p>©︎Copyright2021　滑石きたむら動物病院</p>
