--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -81,7 +81,7 @@
     <section id="about" class="full-size">
         <div class="wrapper">
             <div id="about-heading">
-                <h1 class="primary-color">動物たちの健康で<span class="primary-color">幸せな生活をサポート</span></h1>
+                <h1 class="primary-color">動物たちの健康で<br class="no-pc">幸せな生活をサポート</h1>
                 <p>
                     <span>当院は地域に密着し、皆さまの大切な家族の一員である動物たちのホームドクターを目指しています。</span>
                     <span>緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。</span>
