fix mediate layout

--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -60,18 +60,20 @@
         </div>
     </div>
     <div id="about" class="full-size">
-        <h1>ABOUT</h1>
-        <div class="about-contents contents-wrapper">
-            <div class="about-item-img">
-                <img src="images/PC/about.png" alt="about" class="pc"
-                    srcset="images/PC/about.png 1x,images/PC/about@2x.png 2x">
-                <img src="images/SP/about-sp.png" alt="about" class="sp"
-                    srcset="images/SP/about-sp.png 1x,images/SP/about-sp@2x.png 2x">
-            </div>
-            <div class="about-item-text txt-left flex-column">
-                <h2>老舗の味をテイクアウトで楽しめる<br class="pc">新しいカフェスタイル</h2>
-                <p>知る人ぞ知る東京銀座の老舗カフェが提供する、移動販売のテイクアウトコーヒーです。<span>「いつもの」がお家でオフィスでお気軽に楽しめます。</span></p>
-                <button class="btn">MORE</button>
+        <div class="wrapper">
+            <h1>ABOUT</h1>
+            <div class="about-contents contents-wrapper">
+                <div class="about-item-img">
+                    <img src="images/PC/about.png" alt="about" class="pc"
+                        srcset="images/PC/about.png 1x,images/PC/about@2x.png 2x">
+                    <img src="images/SP/about-sp.png" alt="about" class="sp"
+                        srcset="images/SP/about-sp.png 1x,images/SP/about-sp@2x.png 2x">
+                </div>
+                <div class="about-item-text txt-left flex-column">
+                    <h2>老舗の味をテイクアウトで楽しめる<br class="pc">新しいカフェスタイル</h2>
+                    <p>知る人ぞ知る東京銀座の老舗カフェが提供する、移動販売のテイクアウトコーヒーです。<span>「いつもの」がお家でオフィスでお気軽に楽しめます。</span></p>
+                    <button class="btn">MORE</button>
+                </div>
             </div>
         </div>
     </div>
