--- a/TheLittleCafe/index.html
+++ b/TheLittleCafe/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     </header>
-    <div id="top" class="full-size">
+    <div id="top">
         <p>お好みのブレンドを<br class="sp">お手軽に</p>
     </div>
     <div class="wrapper">
@@ -59,17 +59,17 @@
             </div>
         </div>
     </div>
-    <div id="about" class="full-size">
+    <div id="about">
         <div class="wrapper">
             <h1>ABOUT</h1>
-            <div class="about-contents contents-wrapper">
+            <div class="about-contents">
                 <div class="about-item-img">
                     <img src="images/PC/about.png" alt="about" class="pc"
                         srcset="images/PC/about.png 1x,images/PC/about@2x.png 2x">
                     <img src="images/SP/about-sp.png" alt="about" class="sp"
                         srcset="images/SP/about-sp.png 1x,images/SP/about-sp@2x.png 2x">
                 </div>
-                <div class="about-item-text txt-left flex-column">
+                <div class="about-item-text txt-left">
                     <h2>老舗の味をテイクアウトで楽しめる<br class="pc">新しいカフェスタイル</h2>
                     <p>知る人ぞ知る東京銀座の老舗カフェが提供する、移動販売のテイクアウトコーヒーです。<span>「いつもの」がお家でオフィスでお気軽に楽しめます。</span></p>
                     <button class="btn">MORE</button>
@@ -77,8 +77,8 @@
             </div>
         </div>
     </div>
-    <footer class="full-size">
-        <p>&copy;Copyright2021 THE LITTLE CAFE</p>
+    <footer>
+        <p>©︎Copyright2021 THE LITTLE CAFE</p>
     </footer>
 </body>
 
